--- a/public/index.html
+++ b/public/index.html
@@ -316,8 +316,8 @@
 			<input type="time" id="raidtid">
 			<p>Kommentar</p>
 			<textarea id="raidkommentar" onkeydown="checkkey(event, this, 'postraid');"></textarea><br/>
-			<svg onclick="postraid();" class="postbutton fributton" aria-hidden="true" class="svg" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>
-			<svg onclick="hideaddreaid();" aria-hidden="true" class="fributton" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path></svg>
+			<svg onclick="postraid();" class="postbutton fributton nooffline" aria-hidden="true" class="svg" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>
+			<svg onclick="hideaddreaid();" aria-hidden="true" class="fributton nooffline" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path></svg>
 		</div>
 		<div id="posts">
 			
@@ -376,6 +376,7 @@
 		var canvasid = 'myCanvas';
 		if(!file){notimg();return false;}else if(file.type == 'image/png' || file.type == 'image/jpeg'){}else{notimg();return false;};
 		document.getElementById('raidimagepreview').setAttribute('class', 'loading');
+		disableonclick();
 		var reader = new FileReader();
 			reader.readAsDataURL(file);
 			reader.onload = function () {
@@ -482,6 +483,7 @@
 			};
 			document.getElementById('debugcode').value = 'Winner: "' + winnerarray.namn + '". Before selecting winner: ' + possible.length + ' st. Confidence over all: ' + debugconf + ', and winners confidence: ' + winnerconf + ' ["' + debugtext.join('", "') + '"]';
 			document.getElementById('raidimagepreview').removeAttribute('class');
+			enableonclick();
 			/*Ta bort när allt är stabilt slut*/
 		})
     };
@@ -568,7 +570,9 @@
 	};
 	function hideaddreaid(){
 		document.getElementById('raidimage').value = '';
-		document.getElementById('raidimagepreview').src = 'img/ingenbild.png';
+		var raidimagepreview = document.getElementById('raidimagepreview')
+			raidimagepreview.src = 'img/ingenbild.png';
+			raidimagepreview.removeAttribute('class');
 		document.getElementById('raidtid').value = '';
 		document.getElementById('raidkommentar').value = '';
 		var button = document.getElementById('buttonlaggtillraid');
@@ -658,7 +662,6 @@
 		socket.emit('login', '{"username": "' + username + '", "team": "' + team + '"}');
 	};
 	socket.on('sendinfo', function (data) {
-		console.log(data.anonym);
 		if(data.anonym == 'true'){
 			localStorage.setItem('userdata', '{"username": "' + data.userinfo.username + '", "team": "' + data.userinfo.team + '"}');
 		};
@@ -957,10 +960,7 @@
 			setTimeout(function(){message.removeAttribute('class');}, 3000);
 	};
 	var aterkopplad = 'false';
-	socket.on('disconnect', function () {
-		error('error', 'Du tappade kopplingen till servern.');
-		promptclose();
-		hideaddreaid();
+	function disableonclick(){
 		var allnooffline = document.getElementsByClassName('nooffline');
 		for (var i = allnooffline.length - 1; i >= 0; i--) {
 			if(!allnooffline[i].getAttribute('onclick')){}else{
@@ -970,8 +970,25 @@
 				allnooffline[i].removeAttribute('onclick');
 			};
 		};
+	};
+	socket.on('disconnect', function () {
+		error('error', 'Du tappade kopplingen till servern.');
+		promptclose();
+		hideaddreaid();
+		disableonclick();
 		aterkopplad = 'true';
 	});
+	function enableonclick(){
+		var allnooffline = document.getElementsByClassName('nooffline');
+		for (var i = allnooffline.length - 1; i >= 0; i--) {
+			if(!allnooffline[i].getAttribute('data-onclick')){}else{
+				allnooffline[i].setAttribute('onclick', allnooffline[i].getAttribute('data-onclick'));
+				allnooffline[i].setAttribute('class', allnooffline[i].getAttribute('class').replace(' disabled', ''));
+				allnooffline[i].removeAttribute('data-onclick');
+				allnooffline[i].removeAttribute('disabled');
+			};
+		};
+	};
 	socket.on('loadjson', function () {
 		if(!localStorage.getItem('userdata')){
 			document.getElementById('registrera').removeAttribute('style');
@@ -983,16 +1000,7 @@
 			socket.emit('login', localStorage.getItem('userdata'));
 		};
 		getraids();
-		var allnooffline = document.getElementsByClassName('nooffline');
-		for (var i = allnooffline.length - 1; i >= 0; i--) {
-			if(!allnooffline[i].getAttribute('data-onclick')){}else{
-				allnooffline[i].setAttribute('onclick', allnooffline[i].getAttribute('data-onclick'));
-				allnooffline[i].setAttribute('class', allnooffline[i].getAttribute('class').replace(' disabled', ''));
-				allnooffline[i].removeAttribute('data-onclick');
-				allnooffline[i].removeAttribute('disabled');
-			};
-		};
-//nooffline
+		enableonclick();
 	});
 </script>
 </body>
