--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,7 @@
 	<div id="message">Test text</div>
 	<div id="registrera" style="display: none;">
 		<p>Användarnamn/Username<br/>(Vanligt namn, namn i Pokémon Go, lämna blank för "Anonym")</p>
-		<input type="text" id="namn">
+		<input type="text" id="namn" onkeyup="this.value = rensaochsakra(this.value);">
 		<p>Lag/Team</p>
 		<table>
 			<tr id="teamwrapper">
@@ -315,7 +315,7 @@
 			<p>Föreslagen tid</p>
 			<input type="time" id="raidtid">
 			<p>Kommentar</p>
-			<textarea id="raidkommentar" onkeydown="checkkey(event, this, 'postraid');"></textarea><br/>
+			<textarea id="raidkommentar" onkeydown="checkkey(event, this, 'postraid');" onkeyup="this.value = rensaochsakra(this.value);"></textarea><br/>
 			<svg onclick="postraid();" class="postbutton fributton nooffline" aria-hidden="true" class="svg" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>
 			<svg onclick="hideaddreaid();" aria-hidden="true" class="fributton nooffline" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path></svg>
 		</div>
@@ -350,7 +350,10 @@
 		sprak: 'swe',
 		nopost: 'Inga raider reggade ännu idag.. Blir du den första?',
 		loadjson: 'Du har varit bortkopplad från server, raid laddas om.'
-	}
+	};
+	function rensaochsakra(vari){
+		return vari.replace(/[^A-Za-z0-9\s!?\u00C5\u00C4\u00D6\u00E5\u00E4\u00F6\u002D\u0028\u0029]/g,'');
+	};
 	function makeicon(file){
 		var canvasid = 'iconCanvas';
 		if(!file){notimg();return false;}else if(file.type == 'image/png' || file.type == 'image/jpeg'){}else{notimg();return false;};
@@ -494,7 +497,8 @@
 				var input = document.createElement('input');
 					input.setAttribute('type', 'text');
 					input.setAttribute('id', 'promptinput');
-					input.setAttribute('onkeydown', 'checkkey(event, this, "ok");')
+					input.setAttribute('onkeydown', 'checkkey(event, this, "ok");');
+					input.setAttribute('onkeyup', 'this.value = rensaochsakra(this.value);');
 				inputwrapper.appendChild(input);
 				inputwrapper.appendChild(document.createElement('br'));
 		};
@@ -545,6 +549,7 @@
 			}else if(todo == 'edit'){
 				element.blur();
 			}else if(todo == 'kommentsend'){
+				console.log('Skriver automatiskt med följande id: ' + id);
 				skickakommentar(id);
 			}else if(todo == 'ok'){
 				document.getElementById('promptaction').click();
@@ -658,8 +663,8 @@
 				var team = allteam[i].getAttribute('data-team');
 			};
 		};
-		localStorage.setItem('userdata', '{"username": "' + username + '", "team": "' + team + '"}');
-		socket.emit('login', '{"username": "' + username + '", "team": "' + team + '"}');
+		localStorage.setItem('userdata', '{"username": "' + rensaochsakra(username) + '", "team": "' + rensaochsakra(team) + '"}');
+		socket.emit('login', '{"username": "' + rensaochsakra(username) + '", "team": "' + rensaochsakra(team) + '"}');
 	};
 	socket.on('sendinfo', function (data) {
 		if(data.anonym == 'true'){
@@ -808,6 +813,7 @@
 					var kommenttextarea = document.createElement('textarea');
 						kommenttextarea.setAttribute('class', 'kommentartextarea');
 						kommenttextarea.setAttribute('onkeydown', 'checkkey(event, this, "kommentsend", "' + id + '");');
+						kommenttextarea.setAttribute('onkeyup', 'this.value = rensaochsakra(this.value);');
 					kommentarwrapper.appendChild(kommenttextarea);
 					var kommentarbr = document.createElement('br');
 					kommentarwrapper.appendChild(kommentarbr);
@@ -816,6 +822,7 @@
 						kommentsend.setAttribute('value', 'Skicka/Send');
 						kommentsend.setAttribute('class', 'kommentsend nooffline');
 						kommentsend.setAttribute('onclick', 'skickakommentar("' + id + '")');
+						kommentsend.setAttribute('onkeyup', 'this.value = rensaochsakra(this.value);');
 					kommentarwrapper.appendChild(kommentsend);
 				body.appendChild(kommentarwrapper);
 		if(firstorlast == 'true'){
@@ -845,7 +852,10 @@
 	};
 	socket.on('nykommentar', function (data) {
 		var button = document.getElementById(data.id).getElementsByClassName('kommentnummer')[0];
-			var number = document.createTextNode('(' + (parseInt(button.getAttribute('data-num')) + 1) + ')');
+		var wrapper = document.getElementById(data.id).getElementsByClassName('kommentholder')[0];
+		var num = wrapper.getElementsByTagName('p').length + 1;
+			var number = document.createTextNode('(' + num + ')');
+			console.log(number);
 			removechilds(button);
 			button.appendChild(number);
 		addkomment(data);
